# payroll-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  RELEASING.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  event_schema.json  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
demo/: Dockerfile  README.md
demo/ui/: index.html
docs/: index.md  roadmap.md  supply_chain.md
docs/press/: announcement.md  faq.md  one_pager.md
psp_build_pack_v2/psp_build_pack/migrations/: 200_payroll_stubs.sql  204_liability_events.sql  205_domain_events.sql  206_impossible_state_constraints.sql
scripts/: check_event_compat.py  migrate.py
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  concepts.md  getting-started.md  index.md  reference.md  usage.md
src/payroll_engine/: __init__.py  config.py  database.py
src/payroll_engine/api/: app.py  schemas.py
src/payroll_engine/api/routes/: __init__.py  health.py  pay_runs.py
src/payroll_engine/calculators/: __init__.py  engine.py  line_builder.py  tax_calculator.py  types.py
src/payroll_engine/models/: __init__.py  company.py  employee.py  gl.py  payments.py  payroll.py  psp.py
src/payroll_engine/psp/: __init__.py  cli.py  config.py  metrics.py  psp.py
src/payroll_engine/psp/ai/: __init__.py  _optional.py  base.py  counterfactual.py  decision_record.py  explanations.py  features.py  funding_risk.py  insights.py  return_advisor.py  return_codes.py  runbook_assistant.py  tenant_risk.py
src/payroll_engine/psp/ai/models/: __init__.py  rules_baseline.py
src/payroll_engine/psp/events/: __init__.py  emitter.py  store.py  types.py
src/payroll_engine/psp/providers/: __init__.py  ach_stub.py  fednow_stub.py
src/payroll_engine/psp/services/: __init__.py  funding_gate.py  ledger_service.py  liability.py  payment_orchestrator.py  reconciliation.py
src/payroll_engine/services/: __init__.py  commit_service.py  gl_service.py  locking_service.py  pay_run_service.py  payment_service.py
tests/: conftest.py  test_engine.py  test_line_builder.py  test_state_machine.py  test_tax_calculator.py  test_version.py
tests/integration/: conftest.py  test_api_endpoints.py  test_approval_locks.py  test_commit_idempotency.py  test_golden_rules.py  test_immutability.py  test_preview_flow.py  test_reopen_flow.py  test_schema_sanity.py
tests/psp/: conftest.py  test_ai_advisory.py  test_ai_optionality.py  test_domain_events.py  test_funding_gate.py  test_invariant_properties.py  test_ledger_service.py  test_payment_orchestrator.py  test_providers.py  test_reconciliation.py  test_red_team_scenarios.py
