[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payroll-engine"
version = "0.2.1"
description = "US Payroll SaaS Engine with PSP - ledger, payment rails, settlement, and liability management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = [
    "payroll",
    "payments",
    "psp",
    "ledger",
    "ach",
    "fednow",
    "settlement",
    "saas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# =============================================================================
# CORE: No optional dependencies - deterministic money movement only
# =============================================================================
# pip install payroll-engine  # Gets you ledger, funding gate, payments - that's it

# =============================================================================
# OPTIONAL: AI ML Models (advisory-only, cannot move money)
# =============================================================================
# pip install payroll-engine[ai]
#
# TWO-TIER AI SYSTEM:
# - rules_baseline: Works WITHOUT this extra (stdlib only, included in core)
# - ML models: Require this extra (numpy, sklearn, etc.)
#
# You do NOT need [ai] for rules-based advisors. Only install if you want
# to use ML-based prediction models (when available).
ai = [
    # Future ML dependencies:
    # "numpy>=1.24",
    # "scikit-learn>=1.3",
]

# =============================================================================
# OPTIONAL: Crypto/Blockchain integrations (future)
# =============================================================================
# pip install payroll-engine[crypto]
#
# Reserved for future web3/blockchain integrations. Not currently used.
crypto = [
    # Future: web3>=6.0, eth-account>=0.9, etc.
]

# =============================================================================
# Database drivers
# =============================================================================
postgres = [
    "psycopg2-binary>=2.9",
]
asyncpg = [
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
]

# =============================================================================
# Full web stack
# =============================================================================
web = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
]

# =============================================================================
# Development tools
# =============================================================================
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "pyright>=1.1",
    "psycopg2-binary>=2.9",
    "httpx>=0.26",
    "python-dotenv>=1.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]

# =============================================================================
# Bundle: Everything
# =============================================================================
all = [
    "payroll-engine[ai,crypto,postgres,asyncpg,web,dev]",
]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/payroll-engine"
Documentation = "https://github.com/mcp-tool-shop-org/payroll-engine/tree/main/docs"
Repository = "https://github.com/mcp-tool-shop-org/payroll-engine"
Issues = "https://github.com/mcp-tool-shop-org/payroll-engine/issues"
Changelog = "https://github.com/mcp-tool-shop-org/payroll-engine/blob/main/CHANGELOG.md"

[project.scripts]
psp = "payroll_engine.psp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/payroll_engine"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/psp_build_pack_v2",
    "/examples",
    "/docs",
]

# =============================================================================
# Ruff (Linter + Formatter)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments (payroll has many params)
    "PLR2004",  # Magic value comparison (amounts, status codes)
    "E501",     # Line too long (formatter handles this)
    "PLC0415",  # Import outside top-level (lazy imports intentional)
    "TC001",    # Move import into TYPE_CHECKING block (stdlib)
    "TC002",    # Move import into TYPE_CHECKING block (third-party)
    "TC003",    # Move import into TYPE_CHECKING block (first-party)
    "ERA001",   # Commented-out code (design notes and future stubs)
    "PLW0603",  # Global statement (used for lazy dep detection)
    "PLR0912",  # Too many branches (complex domain logic)
    "PLR0915",  # Too many statements
    "PLR0911",  # Too many return statements
    "RUF022",   # __all__ not sorted (grouped by domain concept)
    "UP042",    # PEP 604 union types (Python 3.11 compat)
    "ARG002",   # Unused method arguments (base class overrides)
    "RUF012",   # Mutable class variable (dataclass patterns)
    "E741",     # Ambiguous variable name (domain math uses i, l, n)
    "SIM103",   # Return bool directly (readability preference)
    "SIM108",   # Ternary operator (readability preference)
    "SIM105",   # contextlib.suppress (explicit try/except preferred)
    "SIM102",   # Merge nested if (readability preference)
    "SIM101",   # Duplicate isinstance (readability)
    "F841",     # Local variable assigned but unused (incremental cleanup)
    "RUF059",   # Unused starred variable
    "RUF005",   # Use spread operator (readability)
    "B017",     # assertRaises(Exception) (test patterns)
    "B008",     # Function call in default arg (frozen dataclass defaults)
    "B007",     # Loop variable not used (intentional iteration)
    "B028",     # No stacklevel in warnings.warn
    "B905",     # zip strict (Python 3.10+)
    "PLW0108",  # Lambda may be unnecessary
    "PTH123",   # open() vs Path.open()
    "E402",     # Module-level import not at top (conditional imports)
]

[tool.ruff.lint.isort]
known-first-party = ["payroll_engine"]

[tool.ruff.lint.per-file-ignores]
"src/payroll_engine/api/**/*.py" = [
    "ARG001",  # Framework-required handler params (request, exc, app)
    "B904",    # HTTPException raise-from (intentionally hides internal errors)
]
"tests/**/*.py" = [
    "ARG",     # Unused arguments in fixtures
    "PLR2004", # Magic values in tests are fine
]

# =============================================================================
# Pyright (Type Checker)
# =============================================================================
[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "src/payroll_engine/api",      # Web layer has pre-existing type debt
    "src/payroll_engine/__main__.py",  # Depends on api module
]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no database)",
    "integration: Integration tests (requires database)",
    "red_team: Adversarial tests for constraint validation",
    "slow: Tests that take >1 second",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src/payroll_engine"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
fail_under = 80
